# localAssistent

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
assets/branding/: README.md
assets/models/: catalog.json
scripts/: build.ps1  coverage.ps1  installer.iss  package.ps1  run.ps1  smoke.ps1  test.ps1  verify_release.ps1
src/: launcher.py
src/local_assistant/: __init__.py  app.py  bootstrap.py  config.py  exceptions.py  i18n.py  logging_utils.py  models.py  storage.py
src/local_assistant/actions/: __init__.py  executor.py  parser.py
src/local_assistant/locales/: __init__.py  en.py  ru.py
src/local_assistant/providers/: __init__.py  base.py  llama_cpp_local.py  ollama.py  openai_compatible.py  registry.py
src/local_assistant/services/: __init__.py  chat_service.py  local_runtime_service.py  model_catalog_service.py  model_download_service.py  update_service.py
src/local_assistant/ui/: main_window.py  theme.py  workers.py
src/local_assistant/ui/components/: __init__.py  avatar_assets.py  bottom_nav.py  chat_layout.py  chat_rendering.py  chat_widgets.py  conversation_list_delegate.py  notification_center.py  presence_chip.py  section_card.py  sheet_dialog.py
src/local_assistant/ui/pages/: __init__.py  chat_page.py  profile_page.py
tests/: test_actions.py  test_bootstrap.py  test_chat_service.py  test_config.py  test_entrypoints_and_exports.py  test_i18n.py  test_main_window_flows.py  test_misc_components.py  test_notifications.py  test_ollama_provider.py  test_openai_provider.py  test_runtime_and_services.py  test_storage.py  test_ui_components_and_workers.py  test_ui_sidebar.py  test_update_service.py
updates/: apply_patch_update.ps1  manifest.json
