[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-assistant-desktop"
dynamic = ["version"]
description = "Lightweight Windows desktop assistant with local models and explicit action approvals."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Open Source Contributors" }
]
keywords = ["desktop", "ai", "assistant", "local-models", "pyside6"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: User Interfaces",
]
dependencies = [
  "PySide6>=6.8,<7",
]

[project.optional-dependencies]
dev = [
  "coverage[toml]>=7.6,<8",
  "PyInstaller>=6.11,<7",
]

[project.scripts]
local-assistant = "local_assistant.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { file = ["VERSION.txt"] }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["src/local_assistant", "src/launcher.py"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = false
precision = 0
